--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -33,3 +33,6 @@ services:
     # AppBundle\Service\ExampleService:
     #     arguments:
     #         $someArgument: 'some_value'
+
+    AppBundle\DataFixtures\:
+        resource: '../../src/AppBundle/DataFixtures'
